# LLD

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/lld/: __about__.py  __init__.py
src/parkinglot/: main.py  parking_display_board.py  parking_level.py  parking_lot.py  parking_ticket.py
src/parkinglot/accounts/: account.py  admin.py  assistant.py
src/parkinglot/models/: account.py  parking_spot.py  parking_ticket_status.py
src/parkinglot/parking_spot/: compact_spot.py  electric_spot.py  handicapped_spot.py  large_spot.py  motorcycle_spot.py  parking_spot.py
src/parkinglot/vehicles/: car.py  motorcycle.py  truck.py  vehicle.py
src/shopping_service/: main.py
