[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lld"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Sreeja", email = "sreejamalladi11@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["fastapi", "uvicorn"]

[project.urls]
Documentation = "https://github.com/Sreeja/lld#readme"
Issues = "https://github.com/Sreeja/lld/issues"
Source = "https://github.com/Sreeja/lld"

[tool.hatch.version]
path = "src/lld/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/lld tests}"

[tool.hatch.envs.default.scripts]
start-parking_lot = "uvicorn src.parkinglot.main:app --host 127.0.0.1 --port 8080 --reload"
start-shopping_system = "uvicorn src.shopping_service.main:app --host 127.0.0.1 --port 8081 --reload"
start-all = [
    "uvicorn src.parkinglot.main:app --host 127.0.0.1 --port 8080 --reload &",
    "uvicorn src.shopping_service.main:app --host 127.0.0.1 --port 8081 --reload &"
]

[tool.coverage.run]
source_pkgs = ["lld", "tests"]
branch = true
parallel = true
omit = [
  "src/lld/__about__.py",
]

[tool.coverage.paths]
lld = ["src/lld", "*/lld/src/lld"]
tests = ["tests", "*/lld/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
